# patr

./: .gitignore  LICENSE  README.md  clean.sh  package.sh  requirements.txt  requirements_build.txt  requirements_test.txt  setup.cfg  test.sh  tox.ini  version.sh
patr/: __init__.py  cli.py  ctxt.py  defaults.py  hosts.j2  render.py  utilities.py  validators.py
patr/parsers/: __init__.py  csv.py  yml.py
test/: test_cli.py  test_ctxt.py  test_parsers_csv.py  test_parsers_yml.py  test_render.py  test_utilities.py
