[metadata]
name = patr
author = Max Kovgan
author-email = maxk@devopsent.biz
summary = pretty awesome template renderer
description-file = README.md
home-page = https://github.com/devopsent/patr
license = MIT
requires =
    jinja2
    yaml
    argparse

classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
keywords =
    patr

[files]
packages =
    patr
[entry_points]
console_scripts =
    patr = patr.cli:main
